--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/kbd": "2.0.17",
     "@nextui-org/link": "2.0.19",
     "@nextui-org/navbar": "2.0.19",
+    "@nextui-org/react": "^2.2.8",
     "@nextui-org/snippet": "2.0.22",
     "@nextui-org/switch": "2.0.18",
     "@nextui-org/system": "2.0.7",
