--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-aria/visually-hidden": "^3.8.3",
     "@react-spectrum/dropzone": "^3.0.0-beta.0",
     "@spectrum-icons/illustrations": "^3.6.8",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -32,6 +33,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "file-saver": "^2.0.5",
     "framer-motion": "^10.16.2",
     "intl-messageformat": "^10.5.0",
     "next": "13.4.19",
@@ -39,6 +41,8 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "shamir-secret-sharing": "^0.0.3",
+    "sonner": "^1.2.0",
     "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
     "typescript": "5.0.4"
