--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^10.16.2",
     "intl-messageformat": "^10.5.0",
+    "jszip": "^3.10.1",
     "next": "13.4.19",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
