--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@builder.io/partytown": "^0.8.1"
   }
 }
